# extensible-longevity-model

./: .gitignore  CITATION.cff  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml
docs/: ITPSexDiff.html  deck.html  index.html  llms-full.txt  llms.txt  oat_sensitivity.tsv  working_slides.html
docs/paper/: elm_paper.tex
docs/paper/ITPSexDiff/: paper1_sex_differences.tex  references.bib  supplementary.tex
docs/paper/MultiProp/: grant_proposal.tex  references.bib
docs/paper/Predictions/: paper2_predictions.tex
elm/: __init__.py  compounds.py  dose_response.py  model.py  pathways.py  plotting.py  sex_mechanisms.py  uncertainty.py
scripts/: build_paper1_deck.py  export_system_diagram.js  generate_combo_figure.py  generate_figures.py  generate_llms_txt.py  generate_rapa_survival.py  generate_sex_diff_errorbars.py  generate_system_diagram_cy.html  generate_system_diagrams.py  oat_sensitivity.py  recalibrate.py  recalibrate_start_times.py  reproduce_all.py  sweep_ampk_k.py  sweep_cana_antioxidant.py  uncertainty_quantification.py
scripts/clock_pca/: clock_methylation_fraction.py  clock_methylation_fraction.txt
tests/: smoke_test.py  test_pathways.py
