[project]
name = "extensible-longevity-model"
version = "0.1.0"
description = "Mechanistic ODE model of aging interventions, calibrated to ITP data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
]

[tool.setuptools.packages.find]
include = ["elm*"]

[project.urls]
Homepage = "https://github.com/silmonbiggs/extensible-longevity-model"
Documentation = "https://silmonbiggs.github.io/extensible-longevity-model/deck.html"
